ws: HitTestQuery uses GetTransformToTarget

HitTestQuery uses GetTransformToTarget when Window Service
is in use because there is a ClientRoot frame sink id in
hit test data that the browser process does not know thus
could not put it in |target_ancestors| to go the optimized
transform code path. Use GetTransformToTarget to correctly
transform location with Window Service.

Also remove the ClientRoot frame sink id from the hit test data
used in a bunch of OOPIF tests that use a direct index into hit
test data.

Bug: 884360, 895029
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I0943e7719e7fb418eaa2304765376b31065eea07
Reviewed-on: https://chromium-review.googlesource.com/c/1281167
Reviewed-by: Ria Jiang <riajiang@chromium.org>
Reviewed-by: Ken Buchanan <kenrb@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601312}
Former-commit-id: 5cb30fcac9f26c0126cf5e7e1ff224ec94d98886